# plugin-rack

./: .gitignore  CLAUDE.md  Cargo.toml  DEV_WORKFLOW.md  NEXT_SESSION_PROMPT.md  README.md  SPEC.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: feature.md  review-feedback.md
.github/workflows/: automerge.yml  ci.yml  nightly.yml
crates/rack-core/: Cargo.toml
crates/rack-core/src/: lib.rs
crates/rack-gui/: Cargo.toml
crates/rack-gui/src/: guest_view.rs  lib.rs
crates/rack-host-clap/: Cargo.toml
crates/rack-host-clap/src/: lib.rs
crates/rack-host-vst3/: Cargo.toml
crates/rack-host-vst3/src/: lib.rs
crates/rack-ipc/: Cargo.toml
crates/rack-ipc/src/: lib.rs
crates/rack-plugin/: Cargo.toml
crates/rack-plugin/src/: lib.rs
pluginrack/: README.md  pyproject.toml
pluginrack/src/pluginrack/: __init__.py  cli.py  sh.py
pluginrack/src/pluginrack/commands/: build.py  ci.py  issue.py  pr.py  release.py  status.py  usage.py  verify.py  verify_bitwig_mod.py
pluginrack/tests/: README.md  conftest.py  test_cli_help.py  test_issue.py  test_pr.py  test_status.py  test_verify.py
research/: bitwig.md  ci_verification.md  gui.md  hosting.md  ipc.md  issue_11_state_persistence.md  issue_12_heartbeat_thread.md  issue_12_ipc_registry.md  issue_14_bitwig_mod_verify.md  issue_17_verify_render.md  issue_18_clap_validator.md  issue_25_send_impl.md  issue_29_strip_order_docs.md  nih_plug.md  prior_art.md  state_api_notes.md  vst3_spec.md
scripts/: file_v1_issues.py  verify_render.py
xtask/: Cargo.toml
