[project]
name = "pluginrack"
version = "0.3.0"
description = "Orchestration CLI for the plugin-rack repo (build, verify, issues, PRs, CI, release, usage)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT OR Apache-2.0" }
authors = [{ name = "Brian Edwards", email = "brian.mabry.edwards@gmail.com" }]
dependencies = [
    "click>=8.1",
    "rich>=13.7",
    "httpx>=0.27",
    "tomli>=2.0; python_version<'3.11'",
]

[project.scripts]
pluginrack = "pluginrack.cli:main"

[project.optional-dependencies]
verify = [
    "dawdreamer>=0.7",
    "numpy>=2.0",
    "soundfile>=0.12",
]

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pluginrack"]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8",
]
