[package]
name = "rack-core"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Core DSP, scheduling, and state for plugin-rack"

[dependencies]
atomic_float.workspace = true
crossbeam.workspace = true
parking_lot.workspace = true
log.workspace = true
