[package]
name = "rack-gui"
version = "0.7.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "GUI for plugin-rack (egui via nih_plug_egui)"

[dependencies]
nih_plug.workspace = true
nih_plug_egui.workspace = true
egui.workspace = true
rack-core.workspace = true
rack-host-vst3.workspace = true
log.workspace = true
serde.workspace = true
crossbeam.workspace = true
anyhow.workspace = true
parking_lot.workspace = true
vst3 = "0.3"

[target.'cfg(target_os = "macos")'.dependencies]
# NSView requires NSResponder feature. NSThread enables MainThreadMarker::new().
objc2 = "0.5"
objc2-app-kit = { version = "0.2", features = ["NSView", "NSResponder"] }
objc2-foundation = { version = "0.3", features = ["NSThread"] }
