[package]
name = "rack-host-clap"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "CLAP guest plugin hosting for plugin-rack"

[dependencies]
rack-core.workspace = true
anyhow.workspace = true
log.workspace = true
clack-host.workspace = true
clack-extensions.workspace = true
