[package]
name = "rack-host-vst3"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "VST3 guest plugin hosting for plugin-rack"

[dependencies]
rack-core.workspace = true
anyhow.workspace = true
log.workspace = true
vst3 = "0.3"
libloading = "0.8"

[lints.clippy]
# VST3 enum DefaultEnumType is c_uint on macOS but c_int (i32) on Windows;
# `as i32` is required for macOS but triggers useless_conversion on Windows.
useless_conversion = "allow"
