[package]
name = "rack-host-vst3"
version = "0.3.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "VST3 guest plugin hosting for plugin-rack"

[dependencies]
rack-core.workspace = true
anyhow.workspace = true
log.workspace = true
vst3 = "0.3"
libloading = "0.8"

[target.'cfg(target_os = "macos")'.dependencies]
objc2.workspace = true
objc2-app-kit.workspace = true

[lints.clippy]
# VST3 enum DefaultEnumType is c_uint on macOS but c_int (i32) on Windows;
# `as i32` is required for macOS but triggers useless_conversion / unnecessary_cast on Windows.
useless_conversion = "allow"
unnecessary_cast = "allow"
